fix(scrollbar): add scrollbar gutter

--- a/src/styles/oeb/oeb_styles.scss
+++ b/src/styles/oeb/oeb_styles.scss
@@ -9,6 +9,7 @@
 
 html {
 	font-family: rubik;
+	scrollbar-gutter: stable;
 }
 
 .oeb {
